--- a/EdgeDetection/Views/ChartView.xaml
+++ b/EdgeDetection/Views/ChartView.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="EdgeDetection.Views.ChartView"
+﻿<UserControl x:Class="EdgeDetectionApp.Views.ChartView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:EdgeDetection.Views"
-             xmlns:mv="clr-namespace:EdgeDetection.ViewModel"
+             xmlns:local="clr-namespace:EdgeDetectionApp.Views"
+             xmlns:mv="clr-namespace:EdgeDetectionApp.ViewModel"
              xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
