--- a/EdgeDetection/MainWindow.xaml
+++ b/EdgeDetection/MainWindow.xaml
@@ -8,12 +8,13 @@
         xmlns:v="clr-namespace:EdgeDetectionApp.Views"
         xmlns:md="https://github.com/fantasticfiasco/mvvm-dialogs"
         xmlns:converters ="clr-namespace:EdgeDetectionApp.Converters"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         mc:Ignorable="d"
         md:DialogServiceViews.IsRegistered="True"
         x:Name="mainWindow"
         DataContext="{Binding Path=MainViewModel, Source={StaticResource ViewModelLocator}}"
         Background="#222E31"
-        Title="Edge Detection" Height="600" Width="900">
+        Title="Edge Detection" Height="700" Width="1000">
     <Window.Resources>
         <converters:BitmapToBitmapImageConverter x:Key="bitmapToBitmapImageConverter"/>
     </Window.Resources>
@@ -27,8 +28,14 @@
                 <RowDefinition Height="4*"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <Image Margin="20" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center"
-               Source="{Binding Path=ProcessedImage, Mode=OneWay, Converter={StaticResource bitmapToBitmapImageConverter}}" />
+            <Image Margin="20" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" AllowDrop="True"
+               Source="{Binding Path=ImageToShow, Mode=OneWay, Converter={StaticResource bitmapToBitmapImageConverter}}">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="Drop">
+                        <i:InvokeCommandAction Command="{Binding DropImage}" PassEventArgsToCommand="True" />
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+            </Image>
             <StackPanel Grid.Row="1">
                 <Button Width="100" Height="25" Content="Process..." Command="{Binding Process}"/>
                 <Button Width="100" Height="25" Content="Load" Margin="10" HorizontalAlignment="Left" Command="{Binding Load}"/>
@@ -41,8 +48,9 @@
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                <GroupBox Grid.Row="0" Header="Edge Detection Method" Margin="10">
-                    <ListBox x:Name="EdgeDetectorsListBox" Background="#222E31"
+                <Grid Grid.Row="0">
+                    <v:OptionsView/>
+                    <!--<ListBox x:Name="EdgeDetectorsListBox" Background="#222E31"
                              ItemsSource="{Binding EdgeDetectors}" SelectedItem="{Binding SelectedEdgeDetector, Mode=TwoWay}" BorderBrush="Transparent" SelectedIndex="0">
                         <ListBox.ItemContainerStyle>
                             <Style TargetType="ListBoxItem">
@@ -66,8 +74,8 @@
                                 <RadioButton GroupName="raid" Content="{Binding Name}" IsChecked="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListBoxItem}}, Path=IsSelected}" />
                             </DataTemplate>
                         </ListBox.ItemTemplate>
-                    </ListBox>
-                </GroupBox>
+                    </ListBox>-->
+                </Grid>
                 <Grid Grid.Row="1">
                     <v:ChartView/>
                 </Grid>
