--- a/EdgeDetectionApp/App.xaml
+++ b/EdgeDetectionApp/App.xaml
@@ -5,6 +5,10 @@
              xmlns:vm ="clr-namespace:EdgeDetectionApp.ViewModel"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-        <vm:ViewModelLocator x:Key="ViewModelLocator" />
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Resources/ResourceDictionary.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
